# learning_formulas

./: .env  .gitignore  .~lock.magisterka.doc#  .~lock.magisterka.odt#  CMakeLists.txt  FormulaClassifier.hpp  FormulaEvaluator.cpp  FormulaEvaluator.hpp  FormulaGenerator.cpp  FormulaGenerator.hpp  MainWindow.py  RandomClassifier.cpp  RandomClassifier.hpp  build.sh  chart.py  cycles.csv  docker-compose.yml  docker-init.sh  dump_data.py  file.py  links.txt  magisterka.doc  magisterka.odt  magisterka_updated.doc  main.cpp  main.py  output.txt  readme.md  requirements.txt  run.py  run.sh  search_params.py  test.py  test.txt  train.txt  types.cpp  types.hpp  utils.cpp
classifier/: FormulaClassifier.py
core/: Algorithm.cpp  CMakeLists.txt  Dockerfile  FormulaEvaluator.cpp  FormulaEvaluator.hpp  FormulaGenerator.cpp  FormulaGenerator.hpp  RandomClassifier.cpp  RandomClassifier.hpp  entrypoint.sh  main.cpp  readme.md  test.txt  types.cpp  types.hpp  utils.hpp
core/data/: test.txt  train.txt
core/genetic/algorithm/: Algorithm.cpp  Algorithm.hpp
core/genetic/crosser/: FormulaCrosser.hpp  OnePointCrosser.cpp  OnePointCrosser.hpp
core/genetic/selector/: FormulaSelector.hpp  RankingSelector.cpp  RankingSelector.hpp
core/learning_lib/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  FormulaEvaluator.cpp  FormulaEvaluator.hpp  FormulaGenerator.cpp  types.hpp  utils.cpp
core/result/: 1679949654.txt  1679949798.txt  1682164404.txt  1682164422.txt  1682164448.txt  1682164645.txt  1682165454.txt  1682347006.txt  1682347103.txt  1682347195.txt  1682348008.txt  1682349144.txt  1682350001.txt  1682975592.txt  1683039003.txt  1683039014.txt  1683131838.txt  1683149917.txt  1683298113.txt  1683498232.txt  1683498895.txt  1683499103.txt  1683499114.txt  1683574946.txt  1683574986.txt  1683575230.txt  1683754683.txt  1683754790.txt  1683757425.txt  1683759125.txt  1683924816.txt  1683926539.txt  1683926881.txt  1683926898.txt  1683926916.txt  1683926926.txt  1683982141.txt  1683982155.txt  1683982168.txt  1683982227.txt  (+6 more)
core/tests/: tests.cpp
enums/: DataEncodingState.py
include/: types.hpp
models/: Clause.py  Formula.py  FormulaCollection.py  Interval.py  Literal.py
postprocessing/: FormulaClassVoter.py  FormulaDecoder.py  FormulaPredictor.py  FormulaProcessor.py
preprocessing/: DataManager.py  DataTransformer.py  Pipeline.py  Preprocessor.py  encode_decimal_to_integers.py  missing_values_adder.py  tag_objects.py  to_binary.py
random_algorithm/: Dockerfile  FormulaEvaluator.cpp  FormulaEvaluator.hpp  FormulaGenerator.cpp  FormulaGenerator.hpp  RandomClassifier.cpp  types.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  FormulaGeneratorTest.cpp  formulas.cpp
(+115 files in other folders)
